--- a/index.htm
+++ b/index.htm
@@ -35,12 +35,12 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-inverse navbar-fixed-top">
-           <ul class="nav navbar-nav">
-            <!--<li><img src="Logo.jpg" style="border-radius: 50%; height: 60px; width: 60px">&nbsp;Vandy_LAN</li>-->
-            <li><a class="active" href="index.htm">Home</a></li>
+        <nav class="navbar-fixed-top">
+            <ul>
+                <li style="color: #1E90FF"><img src="Logo.jpg" style="border-radius: 50%; height: 75px; width: 75px">&nbsp;Vandy_LAN</li>
+            <li><a href="index.htm">Home</a></li>
             <li class="dropdown">
-                <a class="dropdown-toggle" data-toggle="dropdown">Register<b class="caret"></b></a>
+                <a class="dropdown-toggle active" data-toggle="dropdown" href="#">Register<b class="caret"></b></a>
                 <ul class="dropdown-menu">
                     <li><a href="Register.htm">Pick a Tournament</a></li>
                     <li><a href="https://docs.google.com/forms/d/1G6QaijU56woFdjEDRJbs1lCf6QuzrqRJQAQTZSYjn1I/viewform" target="_blank">Volunteer</a></li>
@@ -48,20 +48,18 @@
                 </ul>
             </li>
             <li class="dropdown">
-                <a class="dropdown-toggle" data-toggle="dropdown">Info<b class="caret"></b></a>
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#">Info<b class="caret"></b></a>
                 <ul class="dropdown-menu">
                     <li><a href="logistics.htm">Logistics</a></li>
                     <li><a href="FAQ.htm">FAQ's</a></li>
                     <li><a href="about.htm">About Us</a></li>
                 </ul>            
             </li>
-
                 <li><a href="https://www.facebook.com/events/760506580745655/" target="_blank"><i class="fa fa-facebook"></i></a></li>
                 <li><a href="http://vanderbilt.edu" target="_blank"><i class="fa fa-globe"></i></a></li>
                 <li><a href="mailto:vandylanboard@gmail.com? Subject=Question%20for%20Vandy_LAN"><i class="fa fa-envelope"></i></a></li>
-
-        </ul>
-       </nav>
+            </ul>
+        </nav>
         <br /><br /><br /><br /><br />
 
         <!-- Logo -->
