Fixed iOS links for the FAQ's page

--- a/FAQ.htm
+++ b/FAQ.htm
@@ -75,7 +75,7 @@
                 <h1 class="text-center">Registration</h1>
                 <hr />
                 <div id="a1">
-                    <a data-toggle="collapse" data-parent="#a1" data-target="#q1">
+                    <a href="#" data-toggle="collapse" data-parent="#a1" data-target="#q1">
                         <h4>What are the costs for VandyLAN 2015?</h4>
                     </a>
                     <div id="q1" class="collapse">
@@ -83,13 +83,13 @@
                             Admission is free for Vanderbilt students, while there is a $10 entrance fee for non-Vanderbilt participants, which is paid up front at the entrance of FGH. Each participant is responsible for transportation to and from Vandy_LAN. 
                         </p>
                     </div>
-                    <a data-toggle="collapse" data-parent="#a1" data-target="#q2">
+                    <a href="#" data-toggle="collapse" data-parent="#a1" data-target="#q2">
                         <h4>What are the registration deadlines?</h4>
                     </a>
                     <div id="q2" class="collapse">
                         Registration runs until 6pm on the night of Vandy_LAN. People that register after the deadline are subject to a rolling basis until all spots are full / tournament brackets are balanced. People that register after that point should not expect to be placed into a tournament.
                     </div>
-                    <a data-toggle="collapse" data-target="#q3">
+                    <a href="#" data-toggle="collapse" data-target="#q3">
                         <h4>How to register for a Tournament?</h4>
                     </a>
                     <div id="q3" class="collapse">
@@ -101,7 +101,7 @@
                                 3.	Fill out the registration form
                         </pre>
                     </div>
-                    <a data-toggle="collapse" data-target="#q4">
+                    <a href="#" data-toggle="collapse" data-target="#q4">
                         <h4>Can I register for multiple tournaments?</h4>
                     </a>
                     <div id="q4" class="collapse">
@@ -114,7 +114,7 @@
                             <span class="text-danger">Disclaimer: </span>Players will be eliminated if they do not show up to their tournaments promptly.
                         </pre>
                     </div>
-                    <a data-toggle="collapse" data-target="#q5">
+                    <a href="#" data-toggle="collapse" data-target="#q5">
                         <h4>I accidently registered for the wrong tournament. What do I do?</h4>
                     </a>
                     <div id="q5" class="collapse">
@@ -125,13 +125,13 @@
                 <h1 class="text-center">Food</h1>
                 <hr />
                 <div id="a2">
-                    <a data-toggle="collapse" data-target="#q6">
+                    <a href="#" data-toggle="collapse" data-target="#q6">
                         <h4>Will food be served?</h4>
                     </a>
                     <div id="q6" class="collapse">
                         Yes. Papa Johns and soda will be provided in the FGH Atrium (see Schedule).
                     </div>
-                    <a data-toggle="collapse" data-target="#q7">
+                    <a href="#" data-toggle="collapse" data-target="#q7">
                         <h4>Where else can I eat on campus?</h4>
                     </a>
                     <div id="q7" class="collapse">
@@ -161,7 +161,7 @@ There are several restaurants in Vanderbilt&#39s Medical Center, about a 2 min w
                 <h1 class="text-center">Prizes</h1>
                 <hr />
                 <div id="a3">
-                    <a data-toggle="collapse" data-target="#q8">
+                    <a href="#" data-toggle="collapse" data-target="#q8">
                         <h4>When and where will prize drawings take place?</h4>
                     </a>
                     <div id="q8" class="collapse">
@@ -172,7 +172,7 @@ There are several restaurants in Vanderbilt&#39s Medical Center, about a 2 min w
                 <h1 class="text-center">Miscellaneous</h1>
                 <hr />
                 <div id="a4">
-                    <a data-toggle="collapse" data-target="#q9">
+                    <a href="#" data-toggle="collapse" data-target="#q9">
                         <h4>Can I bring my own gaming equipment?</h4>
                     </a>
                     <div id="q9" class="collapse">
@@ -182,7 +182,7 @@ Refer to the rules for the specific tournament in which you are registered. For 
 <span class="text-danger">Disclaimer:</span> VandyLAN assumes no liability for the damage, loss, or theft of your gaming equipment, unless you signed the lending forms to lend your equipment to Vandy_LAN.
                         </p>
                     </div>
-                    <a data-toggle="collapse" data-target="#q10">
+                    <a href="#" data-toggle="collapse" data-target="#q10">
                         <h4>If I have any questions, to whom should I address them?</h4>
                     </a>
                     <div id="q10" class="collapse">
