Fixed navbar active tab coloring issue

--- a/index.htm
+++ b/index.htm
@@ -38,9 +38,9 @@
         <nav class="navbar-fixed-top">
             <ul>
                 <li style="color: #1E90FF"><img src="Logo.jpg" style="border-radius: 50%; height: 75px; width: 75px">&nbsp;Vandy_LAN</li>
-            <li><a href="index.htm">Home</a></li>
+            <li><a class="active" href="index.htm">Home</a></li>
             <li class="dropdown">
-                <a class="dropdown-toggle active" data-toggle="dropdown" href="#">Register<b class="caret"></b></a>
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#">Register<b class="caret"></b></a>
                 <ul class="dropdown-menu">
                     <li><a href="Register.htm">Pick a Tournament</a></li>
                     <li><a href="https://docs.google.com/forms/d/1G6QaijU56woFdjEDRJbs1lCf6QuzrqRJQAQTZSYjn1I/viewform" target="_blank">Volunteer</a></li>
