--- a/about.htm
+++ b/about.htm
@@ -34,7 +34,7 @@
                 <li style="color: #1E90FF"><img src="Logo.jpg" style="border-radius: 50%; height: 75px; width: 75px">&nbsp;Vandy_LAN</li>
             <li><a href="index.htm">Home</a></li>
             <li class="dropdown">
-                <a class="dropdown-toggle active" data-toggle="dropdown" href="#">Register<b class="caret"></b></a>
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#">Register<b class="caret"></b></a>
                 <ul class="dropdown-menu">
                     <li><a href="Register.htm">Pick a Tournament</a></li>
                     <li><a href="https://docs.google.com/forms/d/1G6QaijU56woFdjEDRJbs1lCf6QuzrqRJQAQTZSYjn1I/viewform" target="_blank">Volunteer</a></li>
@@ -42,7 +42,7 @@
                 </ul>
             </li>
             <li class="dropdown">
-                <a class="dropdown-toggle" data-toggle="dropdown" href="#">Info<b class="caret"></b></a>
+                <a class="dropdown-toggle active" data-toggle="dropdown" href="#">Info<b class="caret"></b></a>
                 <ul class="dropdown-menu">
                     <li><a href="logistics.htm">Logistics</a></li>
                     <li><a href="FAQ.htm">FAQ's</a></li>
