Minor grammar changes

--- a/FAQ.htm
+++ b/FAQ.htm
@@ -129,7 +129,7 @@
                         <h4>Will food be served?</h4>
                     </a>
                     <div id="q6" class="collapse">
-                        Yes. Papa Johns and soda will be provided in the FGH Atrium (see Schedule).
+                        Yes. Domino's Pizza and soda will be provided in the FGH Atrium (see Schedule).
                     </div>
                     <a href="#" data-toggle="collapse" data-target="#q7">
                         <h4>Where else can I eat on campus?</h4>
