--- a/about.htm
+++ b/about.htm
@@ -83,6 +83,8 @@
                 <i>Thomas Plaxco, '18</i><br /><br />
                 <b>Secretary</b><br />
                 <i>Anderson Miller, '18</i><br /><br />
+                <b>Social Chair</b><br />
+                <i>Anna Hwang, '17</i><br /><br />
                 <b>Event Coordinator</b><br />
                 <i>Yifan Guo, '17</i><br /><br />
                 <b>Public Relations</b><br />
