--- a/logistics.htm
+++ b/logistics.htm
@@ -112,16 +112,16 @@
         </div>
         
         <h1 class="text-center">Payment</h1><hr />
-        <p style="padding-left: 80px; padding-right: 10px">Vanderbilt students must either show their Commodore Cards, or provide a Vandy email (alumni) in order to be admitted.<br /> Non-Vanderbilt students must pay the $10 entrance fee <b>in cash</b> at the entrance of Featheringill Hall. Our volunteers will work to make the process as convenient as possible</p>
+        <p style="padding-left: 80px; padding-right: 10px">Vanderbilt students must either swipe their Commodore Cards or provide a Vandy email (alumni) in order to be admitted.<br /> Non-Vanderbilt students must pay the $10 entrance fee <b>in cash</b> at the entrance of Featheringill Hall. Our volunteers will work to make this process as convenient as possible.</p>
 
         <h1 class="text-center">Tournament Layout</h1><hr />
-        <p style="padding-left: 80px; padding-right: 10px">Below is the location of each tournament within the Featheringill building. All tournaments are located on the 1st floor.</p>
+        <p style="padding-left: 80px; padding-right: 10px">Below is the location of each tournament within Featheringill Hall. All tournaments are located on the 1st floor.</p>
         <div class="text-center">
             <img src="Spring2016FloorPlan.png" style="height: 400px; width: 600px" />
         </div>
 
         <h1 class="text-center">Location</h1><hr />
-        <p style="padding-left: 80px; padding-right: 10px">Vandy_LAN 2016 is held in the atrium and auditorium of <b>Featheringill Hall</b>, one of three buildings dedicated to Vanderbilt's School of Engineering. A map of the building is shown below.</p>
+        <p style="padding-left: 80px; padding-right: 10px">Vandy_LAN 2016 is held in the atrium and auditorium of <b>Featheringill Hall (FGH)</b>, one of three buildings dedicated to Vanderbilt's School of Engineering. A map of the building is shown below.</p>
         <div id="googleMap" style="width: 500px; height: 380px; margin: 0 auto; margin-bottom: 20px"></div>
 
         <footer style="background: black">
