Some more grammar changes

--- a/FAQ.htm
+++ b/FAQ.htm
@@ -42,7 +42,7 @@
                     <li><a href="about.htm">About Us</a></li>
                 </ul>            
             </li>
-                <li><a href="https://www.facebook.com/events/760506580745655/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                <li><a href="https://www.facebook.com/events/219047631783128/" target="_blank"><i class="fa fa-facebook"></i></a></li>
                 <li><a href="http://vanderbilt.edu" target="_blank"><i class="fa fa-globe"></i></a></li>
                 <li><a href="mailto:vandylanboard@gmail.com? Subject=Question%20for%20Vandy_LAN"><i class="fa fa-envelope"></i></a></li>
             </ul>
@@ -69,7 +69,7 @@
                 <h1 class="text-center">Time and Place</h1>
                 <hr />
                 <div id="a0">
-                    <h3 class="text-center">6pm-12am, Featheringill Hall</h3>
+                    <h3 class="text-center">2pm-11pm, Featheringill Hall</h3>
                 </div>
                 <a id="registration"></a>
                 <h1 class="text-center">Registration</h1>
@@ -105,14 +105,8 @@
                         <h4>Can I register for multiple tournaments?</h4>
                     </a>
                     <div id="q4" class="collapse">
-                        <pre>
-                            Only if either of the following situations applies to you:
-                            
-                                1.	Registered in Smash 4 and want to register for Melee, and vice versa
-                                2.	Participating in the Forza time trial (you can register in any other tournament)
-
-                            <span class="text-danger">Disclaimer: </span>Players will be eliminated if they do not show up to their tournaments promptly.
-                        </pre>
+                        Players can participate in only one tournament at any point in time. You can only register for another tournament that does not have a time conflict with the one you are currently in.<br />
+                        <span class="text-danger">Note: </span>Players will be eliminated if they do not show up to their tournaments promptly.
                     </div>
                     <a href="#" data-toggle="collapse" data-target="#q5">
                         <h4>I accidently registered for the wrong tournament. What do I do?</h4>
@@ -129,7 +123,7 @@
                         <h4>Will food be served?</h4>
                     </a>
                     <div id="q6" class="collapse">
-                        Yes. Domino's Pizza and soda will be provided in the FGH Atrium (see Schedule).
+                        Yes. Domino's Pizza, Jake's Bakes cookies, and soda will be provided in the FGH Atrium (see Schedule).
                     </div>
                     <a href="#" data-toggle="collapse" data-target="#q7">
                         <h4>Where else can I eat on campus?</h4>
@@ -165,7 +159,7 @@ There are several restaurants in Vanderbilt&#39s Medical Center, about a 2 min w
                         <h4>When and where will prize drawings take place?</h4>
                     </a>
                     <div id="q8" class="collapse">
-                        Prize drawings will take place at 10PM right in front of the Jacobs Auditorium. Please submit your tickets 15 minutes prior to the drawing, and keep a copy so you can keep track of the ticket number when the winning number is called. 
+                        Prize drawings will take place at 8PM right in front of the Jacobs Auditorium. Please submit your tickets 15 minutes prior to the drawing, and keep a copy so you can keep track of the ticket number when the winning number is called. 
                     </div>
                 </div>
                 <a id="misc"></a>
