--- a/Register.htm
+++ b/Register.htm
@@ -44,7 +44,7 @@
                     <li><a href="about.htm">About Us</a></li>
                 </ul>            
             </li>
-                <li><a href="https://www.facebook.com/events/760506580745655/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                <li><a href="https://www.facebook.com/events/219047631783128/" target="_blank"><i class="fa fa-facebook"></i></a></li>
                 <li><a href="http://vanderbilt.edu" target="_blank"><i class="fa fa-globe"></i></a></li>
                 <li><a href="mailto:vandylanboard@gmail.com? Subject=Question%20for%20Vandy_LAN"><i class="fa fa-envelope"></i></a></li>
             </ul>
@@ -65,7 +65,7 @@
 								<div class="modal-content">
                                     <div class="modal-body">
                                         <img src="dota2.jpg" style="width: 100%; margin-bottom: 30px">
-									    <p><b>Description:</b> Saturday, March 19 at 2:30PM <br />Featheringill Hall 110<br /> The secret is out! Vandy_LAN will be hosting its very first Dota 2 tournament on March 19th! Watch or play with Vanderbilt's finest players as they compete to find out who is the best at pressing W, W, W, and then R on invoker.<br />1st Place: $35 Amazon Gift Card<br /><br /><b>Rules: </b>The tournament will be 1 vs. 1 solo mid, best of three matches. Two kills or a tower will be necessary for a kill. The tournament is single elimination.</p>
+									    <p><b>Description:</b> Saturday, March 19 at 2:30PM <br />Featheringill Hall 110<br /> 1st Place: $25 Amazon Gift Card<br />2nd Place: $10 Amazon Gift Card <br /><br />The secret is out! Vandy_LAN will be hosting its very first Dota 2 tournament on March 19th! Watch or play with Vanderbilt's finest players as they compete to find out who is the best at pressing W, W, W, and then R on invoker.<br />1st Place: $35 Amazon Gift Card<br /><br /><b>Rules: </b>The tournament will be 1 vs. 1 solo mid, best of three matches. Two kills or a tower will be necessary for a kill. The tournament is single elimination.</p>
                                         <h4><b>Register: </b> <a href="RegistrationForm.htm?q=vandylan_dota_2"> Register Here</a></h4>
                                         Send questions to: vandylanboard@gmail.com																	
                                     </div>
@@ -206,7 +206,7 @@
 								<div class="modal-content">
                                     <div class="modal-body">
                                         <img src="rocket_league.jpg" style="width: 100%; margin-bottom: 30px">
-									    <p><b>Description:</b> Saturday, March 19 at 7:30PM <br />Featheringill Hall 132 <br /> 1st Place: $25 Amazon Gift Card <br />2nd Place: $10 Amazon Gift Card <br /><br /><b>Rules: </b>The format will be 2v2s, double elimination brackets where the top 2 will each recieve a first place prize and the runners up will both receive a second place prize. The platform is PS4. The matches will be exhibition matches with no mutators.</p>
+									    <p><b>Description:</b> Saturday, March 19 at 7:30PM <br />Featheringill Hall 132 <br /> 1st Place: $25 Amazon Gift Card (per person) <br />2nd Place: $10 Amazon Gift Card (per person) <br /><br /><b>Rules: </b>The format will be 2v2s, double elimination brackets where the top 2 will each recieve a first place prize and the runners up will both receive a second place prize. The platform is PS4. The matches will be exhibition matches with no mutators.</p>
                                         <h4><b>Register: </b> <a href="RegistrationForm.htm?q=vandylan_rocket_league"> Register Here</a></h4>
                                         Send questions to: vandylanboard@gmail.com																	
                                     </div>
