--- a/index.htm
+++ b/index.htm
@@ -55,7 +55,7 @@
                     <li><a href="about.htm">About Us</a></li>
                 </ul>            
             </li>
-                <li><a href="https://www.facebook.com/events/760506580745655/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                <li><a href="https://www.facebook.com/events/219047631783128/" target="_blank"><i class="fa fa-facebook"></i></a></li>
                 <li><a href="http://vanderbilt.edu" target="_blank"><i class="fa fa-globe"></i></a></li>
                 <li><a href="mailto:vandylanboard@gmail.com? Subject=Question%20for%20Vandy_LAN"><i class="fa fa-envelope"></i></a></li>
             </ul>
@@ -87,7 +87,7 @@
     <article>
         <h2 class="text-center">Our Event</h2><hr />
         <h4 class="text-center">Saturday, March 19 at 2PM <br />Featheringill Hall</h4>
-        <p>Vanderbilt's premiere gaming event returns for the Spring 2016 semester! Doors open at 2pm, but food and drinks (and games) will be provided throughout the day. Play your favorite games, or just hang out in Featheringill for free food and a chance to win prizes!<br /><br />FREE FOOD, DRINKS, & PRIZES!<br />We will be giving away a PLAYSTATION 4 (Black OPS III Limited Edition Bundle). More prizes to be announced soon!<br /><br /> For a full list of tournaments, check out the link <a href="Register.htm">here</a>.<br />Tournament winners will also receive PRIZES, check the tournament registration tab for more details.<br /><br />There will also be free-play games for gamers who want to play in a non-competitive setting, including DDR, Guitar Hero, Dance Central, and more in the lobby. In addition, Vanderbilt Gamecraft and Vanderbilt Tabletop will be holding events. Details will be added soon. <br /><br />Event is free for Vanderbilt students and alumni. Entry fee for non-Vanderbilt Students is $10. <br />Come out to Featheringill Hall Saturday, March 19th for a night of gaming and good times! See you there!</p>
+        <p>Vanderbilt's premiere gaming event returns for the Spring 2016 semester! Doors open at 2pm, but food and drinks (and games) will be provided throughout the day. Play your favorite games, or just hang out in Featheringill for free food and a chance to win prizes!<br /><br />FREE FOOD, DRINKS, & PRIZES!<br />PRIZES are given away at 8pm and include: Playstation 4 (Black OPS III Limited Edition Bundle), New Nintendo 3DS XL w/ Pokemon Omega Ruby, Sennheiser HD 558 Headphones, and more!<br />FOOD includes Dominos Pizza and Jake's Bakes Cookies. DRINKS include an excessive amount of 2-liters and a few crates of Red Bull.<br /><br /> For a full list of tournaments, check out the link <a href="Register.htm">here</a>.<br />Tournament winners will also receive PRIZES, check the tournament registration tab for more details.<br /><br />There will also be free-play games for gamers who want to play in a non-competitive setting, including DDR, Guitar Hero, Dance Central, and more in the lobby. In addition, Vanderbilt Gamecraft and Vanderbilt Tabletop will be holding events. Details will be added soon. <br /><br />Event is free for Vanderbilt students and alumni. Entry fee for non-Vanderbilt Students is $10. <br />Come out to Featheringill Hall Saturday, March 19th for a night of gaming and good times! See you there!</p>
     </article>
 
 
