Added new tournaments

--- a/Register.htm
+++ b/Register.htm
@@ -238,6 +238,45 @@
 
         </div>
 
+        <div class="row">
+        </div>
+             <div class="col-sm-4">
+					<div class="thumbnail">
+						<img src="star_realm.jpg" data-toggle="modal" data-target="#star_realm">
+						<div id="star_realm" class="modal fade" role="dialog">
+							<div class="modal-dialog modal-lg">
+								<div class="modal-content">
+                                    <div class="modal-body">
+                                        <img src="star_realm.jpg" style="width: 100%; margin-bottom: 30px">
+									    <p><b>Description: </b>  Saturday, March 19 at 5PM <br />Featheringill Hall<br /><br /><b>Rules: </b> Check out the tournament rules <a href="https://www.facebook.com/events/189715524736406/" target="_blank">here</a>.</p>
+                                        <h4><b>Register: </b> <a href="RegistrationForm.htm?q=vandylan_star_realm"> Register Here</a></h4>
+                                        Send questions to: vandylanboard@gmail.com																	
+                                    </div>
+								</div>
+							</div>
+						</div>
+                        <figcaption class="text-center"><h2>Star Realms</h2></figcaption>
+					</div>
+                </div>
+
+             <div class="col-sm-4">
+					<div class="thumbnail">
+						<img src="civilization_v.jpg" data-toggle="modal" data-target="#civilization_v">
+						<div id="civilization_v" class="modal fade" role="dialog">
+							<div class="modal-dialog modal-lg">
+								<div class="modal-content">
+                                    <div class="modal-body">
+                                        <img src="civilization_v.jpg" style="width: 100%; margin-bottom: 30px">
+									    <p><b>Description: </b>  Saturday, March 19 at 2:30PM <br />Featheringill Hall 110<br /><br /><b>Rules: </b> Check out the tournament rules <a href="https://www.facebook.com/events/238679409810416/" target="_blank">here</a>.</p>
+                                        <h4><b>Register: </b> <a href="RegistrationForm.htm?q=vandylan_civilization_v"> Register Here</a></h4>
+                                        Send questions to: vandylanboard@gmail.com																	
+                                    </div>
+								</div>
+							</div>
+						</div>
+                        <figcaption class="text-center"><h2>Civilization V</h2></figcaption>
+					</div>
+                </div>
         </div>
     </div>
 
