--- a/RegistrationForm.htm
+++ b/RegistrationForm.htm
@@ -54,6 +54,8 @@
                 <option id="vandylan_hearthstone" value="vandylan_hearthstone">Hearthstone</option>
                 <option id="vandylan_melee" value="vandylan_melee">Super Smash Bros. Melee</option>
                 <option id="vandylan_rocket_league" value="vandylan_rocket_league">Rocket League</option>
+                <option id="vandylan_civilization_v" value="vandylan_civilization_v">Civilization V</option>
+                <option id="vandylan_star_realm" value="vandylan_star_realm">Star Realms</option>
             </select><br />
 
             <div class="checkbox">
